LC-PS-coding-pattern : Extension added

--- a/Prefix-Sum-Pattern/303. Range Sum Query - Immutable.md
+++ b/Prefix-Sum-Pattern/303. Range Sum Query - Immutable.md
@@ -25,6 +25,8 @@ Prefix Sum is an algorithm where we sum up all the elements including the elemen
 
 Here according to the problem statement we will have to calculate the prefix sum of each element present in the array so, for that we will have to assign the element itself to the first element of the array since, there is no element preceeding the first element in the array.
 
+However, there is another way to calculate the prefix sum which we will discuss in the **extension** of this section at the end.
+
 **Note**
 
 Can you see an interesting pattern here?
@@ -40,7 +42,7 @@ Since, now we have a hint of the problem being solved by using the concept of **
 
 Let us understand the given test-case the first subarray given to us inside the array in which we have to perform our operation and then the subsequest subarrays are the range queries where `sumRange[0]` denotes `left` and `sumRange[1]` denotes `right`.
 
-Now, let's decode the approach as discussed let us calculate the prefix-sum for each element in the given array, so the prefix sum array would be [-2, -2, 1, -4, -2, -3], now take:-
+Now, let's decode the approach as discussed let us calculate the prefix-sum for each element in the given array, so the prefix sum array would be `[-2, -2, 1, -4, -2, -3]`, now take:-
 1. `sumRange[0]` i.e. [0, 2], here we calculate the sum from `index 0 to 2`, since sum till index 0 is 0 itself and sum till `index 2` is 1, so the final sum becomes as 1.
 2. Similarly, `sumRange[1]` i.e. [2, 5], the sum till `index 5` is -3 and sum till `index 1` is -2, so the sum of numbers between `index 2 and 5` is -3 - (-2) which is -1, as so the third case can be understood similarly.
 
@@ -66,6 +68,39 @@ int  sumRange(int  left, int  right) {
 	return prefix_sum_array[right] - prefix_sum_array[left - 1];
 }
 };
+
+```
+
+## Recalling Prefix Sum Algorithm (Extension)
+There is an interesting formulae if we carefully look at the Prefix Sum algorithm, which says:-
+`difference_between_two_indices = prefix_sum[right + 1] - prefix_sum[left]` where `left and right` are the sumRange in the given problem.
+
+Now, you might be thinking is from our `prefix_sum_array = [-2, -2, 1, -4, -2, -3]`, that for given `sumRange = [0, 2]` this does not holds correctly because `-4 - (-2) = -2` but the correct output is `1`, so there is a twist while you are using the given formulae here because our `prefix_sum_array` needs to be computed with a different approach, but how?
+
+Now, to use the formulae given to us above we will need to compute the `prefix_sum_array` by first taking the first element of `prefix_sum_array` as `0`, because there is no element on the left of `nums`, so we assume that the prefix sum of the first element of `nums` array is `0`, next we will calculate the prefix sum same as we did in our previous approach.
+
+So, while calculating we observe that the size of `prefix_sum_array` comes to be one greater than, the previous approach array size, but no problem since the overall space complexity turns out to be `O(n)` it's fine for us to declare the size of `prefix_sum_array` as `nums.size() + 1` and assigning all of it's element as `0` initially, because during summation adding any number to `0` is the number itself.
+
+Hence, our final `prefix_sum_array = [0, -2, -2, 1, -4, -2, -3]`, so now let us understand this approach using another test case where `sumRange = [2, 5]`. Hence, using the formulae we get `-3 - (-2) = -1` which is the correct output.
+
+Hence our code now changes to
+
+```
+#include<bits/stdc++.h>
+using namespace std;
+class  NumArray {
+public:
+vector<int> prefix_sum_array;
+NumArray(vector<int>&  nums) {
+	prefix_sum_array.resize(nums.size() + 1, 0);
+	for(int index = 0; index < nums.size(); index++)
+		prefix_sum_array[index + 1] = prefix_sum_array[index] + nums[index];
+}
+int  sumRange(int  left, int  right) {
+	return prefix_sum_array[right + 1] - prefix_sum_array[left];
+}
+};
+
 ```
 
 ## Time Complexity
