325-Maximum-Size-Subarray-Sum-Equals-k

--- a/Prefix-Sum-Pattern/303. Range Sum Query - Immutable.md
+++ b/Prefix-Sum-Pattern/303. Range Sum Query - Immutable.md
@@ -31,7 +31,7 @@ However, there is another way to calculate the prefix sum which we will discuss 
 
 Can you see an interesting pattern here?
 
-While we are calculating the prefix sum of the array, we always have the sum till **ith index**, so while we are calculating the sum from a given `index i to a given index j` in the prefix-sum array we already have the sum till **ith index** and **jth index** so, if we calculate the difference of `prefix_sum_array[j] - prefix_sum_array[i - 1]` it will give us the sum between the given two indices `i and j`.
+While we are calculating the prefix sum of the array, we always have the sum till **ith index**, so while we are calculating the sum from a given `index i to a given index j` in the prefix-sum array we already have the sum till **ith index** and **jth index** so, if we calculate the difference of `prefix_sum_array[j] - prefix_sum_array[i - 1]` it will give us the sum between the given two indices `i and j` both inclusive.
 
 ## Working With Test-Cases
 Since, now we have a hint of the problem being solved by using the concept of **Prefix Sum** so, let us have a look into one of the test-cases to try solving this problem.
